# nl-router

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml
cpp/: CMakeLists.txt
cpp/cleaner/: CMakeLists.txt
cpp/cleaner/src/: config.cpp  config.hpp  db.cpp  db.hpp  disk.cpp  disk.hpp  main.cpp  metrics.cpp  metrics.hpp  server.cpp  server.hpp
cpp/cmake/: FindDCMTK.cmake
cpp/common/: CMakeLists.txt
cpp/common/crypto/: CMakeLists.txt
cpp/common/crypto/include/nl_router/crypto/: envelope.hpp  kek.hpp
cpp/common/crypto/src/: envelope.cpp  kek.cpp
cpp/common/dcm-probe/: CMakeLists.txt
cpp/common/dcm-probe/tools/: dcm_probe.cpp
cpp/common/dsl/: CMakeLists.txt
cpp/common/dsl/include/nl_router/dsl/: ast.hpp  context.hpp  dsl.hpp  errors.hpp  value.hpp
cpp/common/dsl/src/: context.cpp  evaluator.cpp  grammar.hpp  parser.cpp  value.cpp
cpp/common/dsl/tests/: CMakeLists.txt  test_evaluator.cpp  test_parser.cpp  test_value.cpp
cpp/common/dsl/tools/: dsl_validate.cpp
cpp/common/metrics/: CMakeLists.txt
cpp/common/metrics/include/nl_router/metrics/: exposer.hpp  registry.hpp
cpp/common/metrics/src/: exposer.cpp  registry.cpp
cpp/common/metrics/tests/: CMakeLists.txt  test_registry.cpp
cpp/dispatcher/: CMakeLists.txt
cpp/dispatcher/src/: config.cpp  config.hpp  credential.cpp  credential.hpp  db.cpp  db.hpp  dicom_handler.cpp  dicom_handler.hpp  dicomweb_stow_handler.cpp  dicomweb_stow_handler.hpp  factory.cpp  file_handler.cpp  file_handler.hpp  gcp_dicomweb_handler.cpp  gcp_dicomweb_handler.hpp  gcp_oauth.cpp  gcp_oauth.hpp  handler.hpp  http_handler.cpp  http_handler.hpp  logging.hpp  main.cpp  metrics.cpp  metrics.hpp  object_storage_handler.cpp  object_storage_handler.hpp  server.cpp  server.hpp  stow_upload.cpp  stow_upload.hpp  template.cpp  template.hpp  worker.cpp  worker.hpp
cpp/modules/: CMakeLists.txt
cpp/modules/anonymize_basic/: CMakeLists.txt
cpp/modules/anonymize_basic/src/: main.cpp
cpp/modules/common/: CMakeLists.txt
cpp/modules/common/include/nl_router/module/: worker.hpp
cpp/modules/common/src/: worker.cpp
cpp/modules/standardize_institution_group/: CMakeLists.txt
cpp/modules/standardize_institution_group/src/: main.cpp
cpp/receiver/: CMakeLists.txt
cpp/receiver/src/: association_handler.cpp  association_handler.hpp  config.cpp  config.hpp  db.cpp  db.hpp  disk_guard.cpp  disk_guard.hpp  logging.cpp  main.cpp  metrics.cpp  metrics.hpp  server.cpp  server.hpp  storage.cpp  storage.hpp  tag_extractor.cpp  tag_extractor.hpp  tls_layer.cpp  tls_layer.hpp
cpp/receiver/tests/: make_test_dicom.py
cpp/router/: CMakeLists.txt
cpp/router/src/: config.cpp  config.hpp  context_builder.cpp  context_builder.hpp  db.cpp  db.hpp  main.cpp  metrics.cpp  metrics.hpp  rule_cache.cpp  rule_cache.hpp  server.cpp  server.hpp
dashboards/: README.md  nl-router-overview.json
docs/: auto-deploy-setup.md  development.md  end-to-end-test.md
migrations/: 0001_init_enums.down.sql  0001_init_enums.up.sql  0002_work_queue.down.sql  0002_work_queue.up.sql  0003_rules_and_destinations.down.sql  0003_rules_and_destinations.up.sql  0004_processing_jobs.down.sql  0004_processing_jobs.up.sql  0005_credentials.down.sql  0005_credentials.up.sql  0006_system_config.down.sql  0006_system_config.up.sql  0007_auth.down.sql  0007_auth.up.sql  0008_admin_audit.down.sql  0008_admin_audit.up.sql  0009_seed_processing_modules.down.sql  0009_seed_processing_modules.up.sql  README.md
monitoring/: README.md  docker-compose.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
packaging/: Dockerfile.build  INSTALL.md  README.md  build-all.sh  build.sh  install.sh
packaging/config/: config.toml.example
packaging/nfpm/: nfpm.yaml
packaging/runtime/: Dockerfile  entrypoint.sh
packaging/scripts/: check-deb-contents.sh  postinstall.sh  postremove.sh  preinstall.sh  preremove.sh  redeploy.sh  remote-install.sh
packaging/systemd/: nl-router-api.service  nl-router-cleaner.service  nl-router-dispatcher.service  nl-router-migrate.service  nl-router-module@.service  nl-router-receiver.service  nl-router-route.service
python/nl_router/: __init__.py  __main__.py  config.py  crypto.py  db.py  dsl.py
python/nl_router/api/: __init__.py  app.py  audit.py  auth.py  kinds.py  metrics.py  models.py  probes.py
python/nl_router/api/routes/: __init__.py  assignments.py  audit.py  credentials.py  destinations.py  health.py  processing_modules.py  rules.py  tokens.py  workqueue.py
python/nl_router/cli/: __init__.py  _common.py  config_io.py  destination.py  init.py  migrate.py  rule.py  serve.py  status.py  validate.py
python/nl_router/ui/: __init__.py  auth.py  common.py  routes.py  routes_destinations.py  routes_misc.py  routes_processing.py  routes_rules.py  routes_studies.py
python/nl_router/ui/static/css/: app.css
python/nl_router/ui/templates/: _dashboard_live.html  _destination_test_result.html  _icons.html  _studies_table.html  audit_list.html  base.html  base_unauth.html  config_list.html  credentials_list.html  dashboard.html  destinations_form.html  destinations_list.html  holds_list.html  login.html  processing_module_form.html  processing_modules_list.html  rules_form.html  rules_list.html  studies_list.html  study_detail.html
python/tests/: conftest.py  test_common.py  test_crypto.py  test_dsl.py  test_integration_rules.py  test_models.py  test_probes.py  test_routes_sse.py
tests/load/: concurrent_storescu.sh
tests/security/: phi_leak_grep.sh
